# fly-in

./: AGENTS.md  Makefile  README.md  SKILL.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg  skills-lock.json  test-graph.py
.github/workflows/: copilot-setup-steps.yml
fly_in/: __main__.py  parser.py  simulator.py
skills/python/: SKILL.md
src/: __init__.py  __main__.py  connection.py  display.py  drone.py  drone_occupancy.py  map_menu.py  models.py  network.py  output_logger.py  parser.py  simulator.py  types.py  zone.py
src/utils/: __init__.py  drone_labels.py
tests/: test_benchmarks.py  test_core_features.py  test_parser_errors.py  test_smoke.py
