[project]
name = "fly_in"
version = "1.0.0"
description = "A drone navigation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
]

[tool.mypy]
python_version = "3.10"
exclude = "(^\\.venv/)"
