[project]
name = "fly_in"
version = "1.0.0"
description = "A drone navigation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.0",
    "networkx>=3.4.0",
    "numpy>=2.0.0",
    "pydantic>=2.11.0",
    "simple-term-menu>=1.6.6",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "types-networkx>=3.5.0.20251001",
]

[tool.mypy]
python_version = "3.10"
exclude = "(^\\.venv/)"

[[tool.mypy.overrides]]
# simple_term_menu library doesn't have type hints, so ignore missing imports for it
module = ["simple_term_menu"]
ignore_missing_imports = true
